# minieigen

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  common.hpp  converters.hpp  expose-converters.cpp  expose-matrices.cpp  expose-quaternion.cpp  minieigen.cpp.bak  visitors.hpp
